# .prtgn

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE_EDITOR.md  README.md  RELEASE_TEMPLATE  SECURITY.md  cspell.json  helloworld.prtgn  inno.iss  prtgn-0.2.1-1.x86_64.rpm  prtgn_logo.kra  test.prtgn  text.txt  win_install.bat
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
.rpm/: prtgn.spec
Artiy_The_PRTGN_Protogen/: PRTGN_Watermark.jpg~  prtgn_logo.kra  prtgn_logo.kra~
Artiy_The_PRTGN_Protogen/3D/BZ_Protogen_Kit_-_Triwave/: - READ BEFORE USING -.txt  GUIDE - BLEND Files.txt  GUIDE - Substance Painter Files.txt  GUIDE - Unity Package.txt  LICENSE.md
src/: command.rs  commands.xml  editor.rs  lib.rs  main.rs
src/command/: mod.rs
src/command/prtgn_init/: init.rs  mod.rs
src/command/prtgn_init/init/: text_editor.rs  wav_converter.rs
src/command/prtgn_new/: mod.rs  new.rs
src/command/prtgn_open/: open.rs
src/command/prtgn_wav/: mod.rs  player.rs  wav.rs
src/editor/: obscurity.rs
src/prtgn_new/: editor.rs  mod.rs  new.rs
