[package]
name = "prtgn"
version = "0.1.0"
edition = "2024"
documentation = "https://github.com/ExoticDG/.prtgn/wiki"
readme = "README.md"
authors = ["ExoticDG"]
description = "A Protogen file extension written in Rust."
license = "GNU GPLv3"
license-file = "LICENSE"
repository = "https://github.com/ExoticDG/.prtgn"
keywords = ["protogen", "file extension", "text editor", "terminal ui", "tui", "crossterm", "ratatui", "tui-textarea"]
categories = ["command-line-utilities", "text-editors", "terminal-applications", "file-formats"]

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tui-textarea = "0.7.0"
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
